# DynMenu-prototype

./: CMakeLists.txt  Doxyfile  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: publish-docs.yml
docs/: annotated.html  basemenuactionscontainer_8cpp.html  basemenuactionscontainer_8h.html  basemenumanager_8cpp.html  basemenumanager_8h.html  baseuielement_8cpp.html  baseuielement_8h.html  class_base_menu_actions_container.html  class_base_menu_manager.html  class_base_ui_element.html  class_command.html  class_i_actions_container.html  class_i_base_menu_actions_container.html  class_i_menu_manager.html  class_i_ui_element.html  class_ui_container.html  class_ui_q_menu_bar_element.html  class_ui_q_menu_element.html  class_ui_q_tool_bar_element.html  command_8cpp.html  command_8h.html  containers.dox  containers.html  containers_8dox.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_76b8ecf307d2d6c15c50eaca24006a37.html  dir_acaadc77c9478a219a77e944bc32ebd2.html  files.html  iactionscontainer_8h.html  ibasemenuactionscontainer_8h.html  imenumanager_8h.html  index.html  iuielement_8h.html  mainpage.dox  mainpage_8dox.html  modules.html  namespaces.html  pages.html  uicontainer_8cpp.html  uicontainer_8h.html  (+6 more)
docs/xml/: basemenuactionscontainer_8cpp.xml  basemenuactionscontainer_8h.xml  basemenumanager_8cpp.xml  basemenumanager_8h.xml  baseuielement_8cpp.xml  baseuielement_8h.xml  class_base_menu_actions_container.xml  class_base_menu_manager.xml  class_base_ui_element.xml  class_command.xml  class_i_actions_container.xml  class_i_base_menu_actions_container.xml  class_i_menu_manager.xml  class_i_ui_element.xml  class_ui_container.xml  class_ui_q_menu_bar_element.xml  class_ui_q_menu_element.xml  class_ui_q_tool_bar_element.xml  command_8cpp.xml  command_8h.xml  containers.xml  containers_8dox.xml  dir_76b8ecf307d2d6c15c50eaca24006a37.xml  dir_acaadc77c9478a219a77e944bc32ebd2.xml  index.xml  (+14 more)
mcore/: CMakeLists.txt  baseactionscontainer.cpp  baseactionscontainer.h  basemenuactionscontainer.cpp  basemenuactionscontainer.h  basemenumanager.cpp  basemenumanager.h  command.cpp  command.h  contextmenuactionscontainer.cpp  contextmenuactionscontainer.h  iactionscontainer.cpp  iactionscontainer.h  ibasemenuactionscontainer.h  imenumanageablewindow.h  imenumanager.h  menuactionscontainer.cpp  menuactionscontainer.h  menuactionsmanager.cpp  menuactionsmanager.h  menubaractionscontainer.cpp  menubaractionscontainer.h  menucontainer.h  toolbaractionscontainer.cpp  toolbaractionscontainer.h
mcore/uielements/: basemenuactionscontainer.cpp  basemenuactionscontainer.h  baseuielement.cpp  baseuielement.h  iactionscontainer.h  ibasemenuactionscontainer.h  iuielement.h  uicontainer.cpp  uicontainer.h  uiqmenubarelement.cpp  uiqmenubarelement.h  uiqmenuelement.cpp  uiqmenuelement.h  uiqtoolbarelement.cpp  uiqtoolbarelement.h
